@@ -1,3 +1,8 @@
+2012-07-29  Alan Modra  <amodra@gmail.com>
+
+	* gprof.h: Don't include gconfig.h twice.  Undef conflicting
+	PACKAGE_* defines.
+
 2012-07-27  Mike Frysinger  <vapier@gentoo.org>
 
 	* configure.in (BFD_VERSION): Run bfd/configure --version and
